修改cache配置